<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#494a4d">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:id="@+id/settings_list"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/settings"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/settings_list"
        android:layout_alignStart="@+id/settings_list"
        android:layout_marginTop="25dp"
        android:textColor="#6373c8"
        android:textSize="15dp" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/imageView2"
        android:layout_marginTop="38dp"
        android:src="@mipmap/ic_launcher"
        android:layout_below="@+id/settings_list"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_name"
        android:id="@+id/vName"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#fff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about"
        android:id="@+id/textView8"
        android:textColor="#6373c8"
        android:textSize="15dp"
        android:layout_below="@+id/settings_list"
        android:layout_alignLeft="@+id/settings_list"
        android:layout_alignStart="@+id/settings_list" />


</RelativeLayout>